<resources>
    <string name="app_name">华汉针神</string>
    <string name="str_chn_1">线路1</string>
    <string name="str_chn_2">线路2</string>
    <string name="str_chn_3">线路3</string>
    <string name="str_chn_4">线路4</string>
    <string name="str_chn_5">线路5</string>
    <string name="str_level_default">0</string>
    <string name="str_session_time">治疗时间</string>
    <string name="str_hour">小时</string>
    <string name="str_min">分钟</string>
    <string name="str_treatment_level">治疗强度</string>
    <string name="str_go_back">返回</string>
    <string name="str_stop">停止</string>
    <string name="str_level_dialer_place_holder">##强度调节##</string>
    <string name="str_btn_confirm">确定</string>
    <string name="str_selecting_chn">线路选择</string>
    <string name="str_cancel">取消</string>
    <string name="str_plus_sign">+</string>
    <string name="str_minus_sign">-</string>
    <string name="str_reset">重置</string>
    <string name="str_playlist">播放列表</string>
    <string name="str_treatment_device">治疗仪</string>
    <string name="str_propaganda">宣传片</string>
    <string name="str_theory">产品理论</string>
    <string name="preferences">偏好设定</string>
    <string name="str_contact_us">联系我们</string>
    <string name="str_wifi">WIFI连接</string>
    <string name="str_wireless_network">无线网络</string>
    <string name="str_btn_start">开始</string>
    <string name="str_debug">调试</string>
    <string name="str_settings">设置</string>
    <string name="str_please_input">请输入参数</string>
    <string name="str_frame_preview">帧结构预览</string>
    <string name="str_forge">组装</string>
    <string name="str_send">发送</string>
    <string name="str_chn">线路</string>
    <string name="str_received">接收</string>
    <string name="str_port_status">串口状态</string>
    <string name="str_parameters">参数</string>
    <string name="str_pass_or_not">是否通过校验</string>
    <string name="str_frame">帧</string>
    <string name="str_navigation_forward">前进</string>
    <string name="str_navigation_backward">后退</string>
    <string name="str_description_logo">商标</string>
    <string name="str_description_idle_panel">空闲面板</string>
    <string name="str_wifi_name_placeholder">wifi of good strength</string>
    <string name="str_wifi_connected">已连接</string>
    <string name="str_description_wifi_icon">the icon of available wifi</string>
    <string name="str_remember_wifi">记住网络</string>
    <string name="str_show_password">显示密码</string>
    <string name="str_treatment_home_view">treatment home view</string>
    <string name="str_full_panel_view">full panel view</string>
    <string name="str_framing_test">报文组装/发送</string>
    <string name="str_sweep_gradient_view">Sweep Gradient View</string>
    <string name="str_temperature_meter_view">Temperature Meter View</string>
    <string name="str_switch">切换</string>
    <string name="str_bat_dsc">The remaining battery indicator.</string>
    <string name="str_null">null</string>
    <string name="str_enter_pin">请输入口令</string>
    <string name="str_enter_old_pin">请输入旧口令</string>
    <string name="str_enter_new_pin">请输入新口令</string>
    <string name="str_enter_new_pin_again">请确认新口令</string>
    <string name="str_change_pin">修改口令</string>
    <string name="str_bar_setting">设置</string>
    <string name="str_wifi_setting">WIFI设置</string>
    <string name="str_screen_setting">显示设置</string>
    <string name="str_sound_setting">声音设置</string>
    <string name="str_dev_setting">调试模式</string>
    <string name="str_about_setting">关于本机</string>
    <string name="str_lock_setting">密码设置</string>
    <string name="str_back_setting">返&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;回</string>
    <string name="str_wifi_set">无线网络</string>
    <string name="str_wifi_adv">高级功能</string>
    <string name="str_wifi_passwd">请输入无线网络密码：</string>
    <string name="str_wifi_passwd_hint">请输入密码</string>
    <string name="str_pin_cancel">取消</string>
    <string name="str_music_propaganda">音&#160;&#160;乐</string>
    <string name="str_books_propaganda">阅&#160;&#160;读</string>
    <string name="str_video_propaganda">视&#160;&#160;频</string>
    <string name="str_back_propaganda">返&#160;&#160;回</string>
    <string name="start_txt">开始阅读</string>
    <string name="str_brightness_setting">亮度调节</string>
    <string name="str_media_volume_setting">音乐、视频、游戏和其他媒体</string>
    <string name="str_notify_volume_setting">通知</string>
    <string name="str_touch_notify">触摸提示音</string>
    <string name="str_serial">序列号</string>
    <string name="str_case_setting">病例库</string>
    <string name="str_error_title_fullpanel">错误操作！！！</string>
    <string name="str_error_msg_fullpanel">请稍后再试或重启设备</string>
    <string name="str_error_wait_fullpanel">正在检测中。。。 (=^ ^=)</string>
    <string name="bar_timedefault_hint">Please get the time online</string>
</resources>
