...
		android:layout_weight="1"
		android:orientation="horizontal">


		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/btn_tile_treatment"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_margin="4dp"
			android:layout_weight="1"
			android:background="@android:color/holo_blue_light"
			android:gravity="center"
...
